fix tabbar height on iPhone without notch

--- a/src/main/frontend/mobile/index.css
+++ b/src/main/frontend/mobile/index.css
@@ -41,6 +41,7 @@ html.is-native-iphone {
     }
 }
 
+html.is-native-iphone-without-notch,
 html.is-native-android {
     .cp__footer {
         height: 45px;
